<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 tag

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <string name="app_name">Simple Music Player</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="about_app_version">Version 1.0.0</string>
    <string name="about_app_copyright"> &#169; 2015 tag.</string>
    
    <!-- Notification -->
    <string name="notification_ticker">Now Playing</string>
    <string name="notification_content_text">Open Player</string>
    
    <!-- menu -->
    <string name="menu">Menu</string>
    <string name="menu_player">Player</string>
    <string name="menu_playlists">Playlists</string>
    <string name="menu_artists">Artists</string>
    <string name="menu_albums">Albums</string>
    <string name="menu_songs">Songs</string>
    <string name="menu_genres">Genres</string>
    <string name="menu_years">Years</string>
    <string name="menu_search">Search</string>
    <string name="menu_folder">Folder</string>
    <string name="menu_settings">Settings</string>
    
    <string name="track_detail_title">Title</string>
    <string name="track_detail_artist">Artist</string>
    <string name="track_detail_album">Album</string>
    <string name="track_detail_year">Year</string>
    <string name="track_detail_genre">Genre</string>
    <string name="track_detail_producer">Producer</string>
    <string name="track_detail_producerArtist">Producer Artist</string>
    <string name="track_detail_composer">Composer</string>
    <string name="track_detail_composer2">Composer 2</string>
    <string name="track_detail_comment">Comment</string>
    <string name="track_detail_format">Format</string>
    <string name="track_detail_encType">Encode Type</string>
    <string name="track_detail_bitrate">Bitrate</string>
    <string name="track_detail_path">Path</string>
    <string name="track_detail_value_default">N/A</string>
    
    <!-- Dialog: create new playlist -->
    <string name="dialog_create_new_playlist">Create new playlist</string>
    <string name="new_playlist">New playlist</string>
    <string name="dialog_create">Create</string>
    <string name="dialog_abort">Abort</string>
</resources>
